--- a/example/layout.yml
+++ b/example/layout.yml
@@ -5,4 +5,4 @@ email: { validate: email, default: example@example.com }
 phone: { validate: regex, pattern: '([0-9]{2}[\. ]?){4}[0-9]{2}', default: 06.00.00.00.00 }
 ip: { validate: IPv4, default: 127.0.0.1 }
 location: { command: include, path: modules/location }
-hobbies: { command: pattern, path: modules/hobbie }
+#hobbies: { command: pattern, path: modules/hobbie }
