--- a/example/myModel/modules/location.yml
+++ b/example/myModel/modules/location.yml
@@ -1,5 +1,6 @@
-city:
-cp:
-country:
-long:
-lat:
+# @Author: Antoine Pointeau <kalif>
+# @Date:   2017-02-23T01:06:11+01:00
+# @Email:  web.pointeau@gmail.com
+# @Filename: location.yml
+# @Last modified by:   kalif
+# @Last modified time: 2017-04-04T00:58:15+02:00
